Update Iniciar - v.3.1.3.html

--- a/Iniciar - v.3.1.3.html
+++ b/Iniciar - v.3.1.3.html
@@ -103,6 +103,14 @@
         <li><a href="https://www.youtube.com/" target="_blank">Youtube</a> - Plataforma de compartilhamento de vídeos online que usa IA para recomendações personalizadas, legendas automáticas, tradução de conteúdo e monetização para criadores, sendo a maior plataforma global de streaming de vídeos.</li>
     </ul>
 
+        <h2>Programas Úteis</h2>
+    <ul>
+        <li><a href="https://dicionario.priberam.org" target="_blank">Dicionário Priberam</a> - O Dicionário Contemporâneo com 165.000 entradas, abrangendo vocabulário geral, áreas científicas, sinônimos, antônimos, conjugação verbal, etimologia e pronúncia.</li>
+        <li><a href="https://frontpages.freedomforum.org/" target="_blank">Manchetes dos Principais Jornais do Mundo</a> - O Freedom Forum é uma fundação apartidária dedicada a promover as liberdades da Primeira Emenda para todos, engajando anualmente milhares de americanos em aulas, conversas e celebrações desses direitos fundamentais que fazem dos Estados Unidos um símbolo de liberdade. </li>
+        <li><a href="https://www.shanghairanking.com/rankings/arwu/2024" target="_blank">Shanghai Ranking</a> - Avalia as melhores universidades globais com base em indicadores como Nobel, Citações e publicações de destaque.</li>
+        <li><a href="https://www.youtube.com/" target="_blank">Youtube</a> - Plataforma de compartilhamento de vídeos online que usa IA para recomendações personalizadas, legendas automáticas, tradução de conteúdo e monetização para criadores, sendo a maior plataforma global de streaming de vídeos.</li>
+    </ul>
+
     <footer>
         &copy; 2024 Augusto Seixas - Última alteração: <span id="ultima-alteracao"></span>
     </footer>
